Revert "use Z3 as a (dynamic) library instead of a process"
This reverts commit 98a135e10ec8e6ea9cbf95b8c05a5360128ca536.

--- a/booster/package.yaml
+++ b/booster/package.yaml
@@ -91,7 +91,7 @@ library:
   - regex-base
   - regex-pcre-builtin
   - smtlib-backends
-  - smtlib-backends-z3
+  - smtlib-backends-process
   - stm
   - stm-conduit
   - syb
